<resources>
    <string name="app_name">Guide Maps</string>
    <string name="logo_name">Encuentra tu Camino</string>
    <string name="slogan_name">¡Todo lo que tiene tu ciudad está aquí!</string>
    <string name="powered_by">Desarrollado por David Blanes</string>
    <string name="API_KEY">AIzaSyAOKAdq54s6h9mfraV0bzrfUG672iavQ9k</string>

    <!-- On Boarding Screen -->

    <!-- Títulos -->
    <string name="first_slide_title">Busca tu Localización</string>
    <string name="second_slide_title">Haz una Llamada</string>
    <string name="third_slide_title">Añade el Lugar que Falta</string>
    <string name="fourth_slide_title">Siéntate y Disfruta</string>

    <!-- Descripciones -->
    <string name="first_slide_desc">Puede buscar cualquier lugar cercano o dentro de la ciudad especificada. Le mostraremos las tiendas específicas o todas las relacionadas con su búsqueda. </string>
    <string name="second_slide_desc">Proporcionamos casi todos los números de todos los departamentos y tiendas registradas con nosotros. También puede realizar reservas.</string>
    <string name="third_slide_desc">Si tienes una tienda o algo y quieres formar parte de nuestro creciente sector, añade tu lugar siguiendo unos sencillos pasos.</string>
    <string name="fourth_slide_desc">Nosotros nos encargaremos de todo por ti. Como tienes la aplicación en tu bolsillo, no tienes que preocuparte de nada.  </string>

    <!-- Botones -->
    <string name="skip_btn">Saltar</string>
    <string name="next_btn">Siguiente</string>
    <string name="let_get_started">Empecemos</string>


    <!-- Dashboard -->

    <!-- Categorías -->
    <string name="hotels">Hoteles</string>
    <string name="restaurants">Restaurantes</string>
    <string name="shops">Tiendas</string>
    <string name="banks">Bancos</string>
    <string name="airports">Aeropuertos</string>
    <string name="education">Educación</string>

    <!-- Títulos y Descripciones -->
    <string name="featured_locations">Todos los lugares destacados</string>
    <string name="featured_locations_description">¡Todos los lugares que aparecen y tienen la mayor demanda en la ciudad!</string>
    <string name="most_viewed_locations">Lo más visto</string>
    <string name="categories">Categorías</string>
    <string name="view_all">Ver todo</string>
    <string name="search_text">Buscar...</string>


    <!-- Navigation Drawer -->

    <!-- Menu -->
    <string name="home">Inicio</string>
    <string name="search">Buscar</string>
    <string name="all_categories">Categorías</string>
    <string name="add_missing_place">Añadir Lugar</string>
    <string name="login">Iniciar Sesión</string>
    <string name="profile">Perfil</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="share">Compartir</string>
    <string name="rate_us">Califícanos</string>
    <string name="favourite">Favoritos</string>


    <!-- Categorías -->
    <string name="car_rent">Alquiler de Coches</string>
    <string name="expand_all">Ampliar</string>
    <string name="hospitals">Hospitales</string>


    <!-- Retailer Panel -->
    <string name="sign_up">Registrarse</string>
    <string name="retailer_heading">Haz crecer tu negocio</string>
    <string name="retailer_tag_line">¡Le ayudaremos a hacer crecer su negocio mediante servicios en línea!</string>
    <string name="create_account">Crear Cuenta</string>
    <string name="how_we_work">¿Cómo trabajamos?</string>
    <string name="remember_me">Recuérdame</string>
    <string name="forget_password">Olvidar Contraseña</string>


    <!-- Login -->
    <string name="enter_username">Nombre de Usuario</string>
    <string name="enter_password">Contraseña</string>
    <string name="enter_full_name">Nombre Completo</string>
    <string name="enter_email">Email</string>
    <string name="borrar_de_favoritos">Borrar de favoritos</string>
    <string name="title_activity_create_map">CreateMapActivity</string>
    <string name="title_activity_other_maps">OtherMapsActivity</string>


    <!-- Dialog Create Places -->
    <string name="dcp_name">Nombre</string>
    <string name="dcp_desc">Descripción</string>

</resources>